--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,4 +1,9 @@
 /*global styles*/
+/*
+   Author: Emily Boucher
+   Purpose: CSS styling for all pages of the farmers market website
+   Last Modified: February 18, 2024
+*/
 html {
   font-family: "Open Sans", sans-serif;
   font-size: 62.5%;
