--- a/docs/styles.css
+++ b/docs/styles.css
@@ -538,49 +538,84 @@ tfoot {
 }
 
 /* Carousel container styles */
-.carousel-container {
+/*----NEW CODE APRIL 2, 2024----*/
+.carousel {
   position: relative;
+  height: 300px;
+  width: 80%;
+  margin: auto;
+  margin-bottom: 30px;
+}
+
+.carousel__image {
   width: 100%;
-  overflow: hidden; /* Ensure that overflow is hidden to hide slides outside the container */
+  height: 100%;
+  object-fit: cover;
 }
 
-/* Wrapper for carousel slides */
-.carousel-wrapper {
-  display: flex;
-  transition: transform 0.5s ease; /* Smooth transition for slide movement */
+.carousel__track-container {
+  height: 100%;
+  position: relative;
+  overflow: hidden;
 }
 
-/* Individual carousel slide */
-.carousel-slide {
-  flex: 0 0 100%; /* Ensure each slide takes up full width */
+.carousel__track {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  position: relative;
+  height: 100%;
+  transition: transform 250ms ease-in;
 }
 
-/* Image styles */
-.carousel-slide img {
-  width: 100%; /* Make images responsive and fill their container */
-  height: auto; /* Maintain aspect ratio */
+.carousel__slide {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
 }
 
-/* Button styles */
-.cbutton {
+.carousel__button {
   position: absolute;
   top: 50%;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  border: none;
-  padding: 10px;
+  transform: translateY(-50%);
+  background: transparent;
+  border: 0;
   cursor: pointer;
 }
 
-/* Positioning for previous button */
-#prevBtn {
-  left: 0;
+.carousel__button--left {
+  left: -6px;
 }
 
-/* Positioning for next button */
-#nextBtn {
-  right: 0;
+.carousel__button--right {
+  right: -6px;
 }
+.carousel__button img {
+  width: 35px;
+}
+
+.carousel__nav {
+  /* background-color: pink; */
+  display: flex;
+  justify-content: center;
+}
+
+.carousel__indicator {
+  border: 0;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  margin: 10px;
+  background: rgba(223, 201, 175, 0.4);
+  cursor: pointer;
+}
+
+.carousel__indicator.current-slide {
+  background: rgba(223, 201, 175, 1);
+}
+
+/*----OUR MARKETS DESKTOP----*/
 
 /*end of carousel
 
@@ -1028,87 +1063,85 @@ footer.mobile-layout.desktop-layout {
     font-size: 3rem;
   }
 
-    /*----NEW CODE APRIL 2, 2024----*/
-    .carousel {
-position:relative;
-height: 800px;
-width: 80%;
-margin: 0 auto;
-margin-bottom: 130px;
-}
+  /*----NEW CODE APRIL 2, 2024----*/
+  .carousel {
+    position: relative;
+    height: 800px;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 130px;
+  }
 
-.carousel__image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+  .carousel__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
-.carousel__track-container {
-  background: lightgreen;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
+  .carousel__track-container {
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+  }
 
-}
+  .carousel__track {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+    height: 100%;
+    transition: transform 250ms ease-in;
+  }
 
-.carousel__track {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  position: relative;
-  height: 100%;
-  transition: transform 250ms ease-in;
-}
+  .carousel__slide {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+  }
 
-.carousel__slide {
-  position: absolute;
-  top:0;
-  bottom: 0;
-  width: 100%;
-}
+  .carousel__button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+  }
 
-.carousel__button{
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: transparent;
-  border: 0;
-  cursor: pointer;
-}
+  .carousel__button--left {
+    left: -60px;
+  }
 
-.carousel__button--left{
-  left: -60px;
-}
+  .carousel__button--right {
+    right: -60px;
+  }
+  .carousel__button img {
+    width: 50px;
+  }
 
-.carousel__button--right{
-  right: -60px;
-}
-.carousel__button img{
-  width: 50px;
-}
+  .carousel__nav {
+    /* background-color: pink; */
+    display: flex;
+    justify-content: center;
+  }
 
-.carousel__nav{ 
-  /* background-color: pink; */
-  display: flex;
-  justify-content: center;
-}
+  .carousel__indicator {
+    border: 0;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    margin: 30px;
+    background: rgba(223, 201, 175, 0.4);
+  }
 
-.carousel__indicator {
-  border: 0;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  margin: 30px;
-  background: rgba(223, 201, 175, .4)
-}
+  .carousel__indicator.current-slide {
+    background: rgba(223, 201, 175, 1);
+  }
 
-.carousel__indicator.current-slide{
-  background: rgba(223, 201, 175, 1)
-}
-
-  /*----OUR MARKETS DESKTOP----*/
-  /*----OUR MARKETS DESKTOP----*/
-  /*----OUR MARKETS DESKTOP----*/
+  /*----OUR MARKETS DESKTOP END----*/
+  /*----OUR MARKETS DESKTOP END----*/
+  /*----OUR MARKETS DESKTOP END----*/
 
   /*--Community Page Styles--*/
   .communitypage h1 {
