--- a/docs/styles.css
+++ b/docs/styles.css
@@ -107,29 +107,30 @@ li {
 
 /* NEW CODE FOR SCROLL BUTTON APRIL 2, 2024*/
 /* NEW CODE FOR SCROLL BUTTON APRIL 2, 2024*/
+        /* Styling for the scroll-to-top button */
+        .go-top-btn {
+          display: none;
+          position: fixed;
+          bottom: 20px;
+          right: 20px;
+          background-color:#283618;
+          color: #fff;
+          border: none;
+          border-radius: 50%;
+          width: 50px;
+          height: 50px;
+          font-size: 20px;
+          cursor: pointer;
+          box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+      }
 
-.go-top-btn {
-  position: fixed;
-  bottom: 50%; 
-  right: 20px; /* Adjusted right side */
-  z-index: 9999; 
-  display: none; 
-  background-color:#ffd7a9;
-  color: #fff; 
-  padding: 10px 20px; 
-  border: none;
-  border-radius: 5px; 
-  cursor: pointer;
-  transition: transform 0.5s ease, opacity 0.5s ease; /* Updated transition properties */
-}
-
-.go-top-btn.show {
-  opacity: 1;
-  transform: translateY(-50%); /* Added translateY transform */
-}
+      .go-top-btn.show {
+          display: block;
+      }
 
 .go-top-btn:hover {
-  background-color:#bc6c25; /* Hover background color */
+  background-color:antiquewhite;
+  color: #283618;
 }
 /* END OF NEW CODE FOR SCROLL BUTTON APRIL 2, 2024*/
 
